fix scrollbar

--- a/src/widjet/Page/Page.module.scss
+++ b/src/widjet/Page/Page.module.scss
@@ -5,3 +5,8 @@
     overflow-y: auto;
     width: 100%;
 }
+
+.trigger{
+    height:20px;
+    width: 20px;
+}
